--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- My Css -->
     <link rel="stylesheet" href="./style/style.css">
     <title>Inicio</title>
 </head>
@@ -15,7 +16,7 @@
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">
-            <img src="./img/Sin título.png" alt="">
+            <img src="./img/Logo.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +24,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mx-5">
               <li class="nav-item">
-                <a class="nav-link active fs-3" aria-current="page" href="#">Home</a>
+                <a class="nav-link active fs-3" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-3" href="./pages/productos.html">Contacto</a>
+                <a class="nav-link fs-3" href="./pages/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-3" href="#">Productos</a>
+                <a class="nav-link fs-3" href="./pages/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-3" href="#">Quien soy</a>
+                <a class="nav-link fs-3" href="./pages/quienSoy.html">Quien soy</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fs-3" href="#">Metodos de pago</a>
@@ -53,13 +54,13 @@
             </div>
             <div class="carousel-inner border">
               <div class="carousel-item active">
-                <img src="/img/1.jpeg" class="d-block w-100" alt="...">
+                <img src="/img/Banner.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/img/2.jpeg" class="d-block w-100" alt="...">
+                <img src="/img/BannerEjemplo1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/img/3.jpeg" class="d-block w-100" alt="...">
+                <img src="/img/BannerEjemplo2.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
