--- a/pages/productos.html
+++ b/pages/productos.html
@@ -17,7 +17,7 @@
 
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">       
-            <img src="../img/Sin título.png" alt="">
+            <img src="../img/Logo.png" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,13 @@
                 <a class="nav-link active fs-3" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link fs-3" href="#">Contacto</a>
+                <a class="nav-link fs-3" href="../pages/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link fs-3" href="#">Productos</a>
+                <a class="nav-link fs-3" href="../pages/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link fs-3" href="#">Quien soy</a>
+                <a class="nav-link fs-3" href="../pages/quienSoy.html">Quien soy</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link fs-3" href="#">Metodos de pago</a>
@@ -56,41 +56,40 @@
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="productosImg" src="../img/gmail.png" alt="producto 2">
-                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 1</h3></a>
+                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 2</h3></a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="productosImg" src="../img/gmail.png" alt="producto 3">
-                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 1</h3></a>
+                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 3</h3></a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="productosImg" src="../img/gmail.png" alt="producto 4">
-                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 1</h3></a>
+                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 4</h3></a>
                 </div>
             </div>
 
             <div class="row mb-5">
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="productosImg" src="../img/gmail.png" alt="producto 1">
-                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 1</h3></a>
+                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 5</h3></a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="productosImg" src="../img/gmail.png" alt="producto 2">
-                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 1</h3></a>
+                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 6</h3></a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="productosImg" src="../img/gmail.png" alt="producto 3">
-                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 1</h3></a>
+                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 7</h3></a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <img class="productosImg" src="../img/gmail.png" alt="producto 4">
-                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 1</h3></a>
+                    <a class="text-center text-decoration-none text-secondary" href="#"><h3>Nombre Producto 8</h3></a>
                 </div>
             </div>
 
         </div>
 
     </main>
-
 
     <!-- Whatsapp -->
     <section class="Whatsapp">
