--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,7 @@
     </nav>
 
     <!-- Formularios -->
-    <div class="container-fluid">
+    <div class="container-fluid mb-5">
         <div class="row">
             <div class="col-lg-6 col-sm-12">
                 <div class="shadow-lg p-3 mb-5 mt-4 bg-body rounded">
