--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             </div>
             <div class="carousel-inner border">
               <div class="carousel-item active">
-                <img src="/img/Banner.jpeg" class="d-block w-100" alt="...">
+                <img src="/img/Banner.jpeg" class="d-block w-100" alt="Banner1">
               </div>
               <div class="carousel-item">
-                <img src="/img/BannerEjemplo1.jpg" class="d-block w-100" alt="...">
+                <img src="/img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner2">
               </div>
               <div class="carousel-item">
-                <img src="/img/BannerEjemplo2.jpg" class="d-block w-100" alt="...">
+                <img src="/img/BannerEjemplo2.jpg" class="d-block w-100" alt="Banner3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
