--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="carousel-inner border">
               <div class="carousel-item active">
-                <img src="/img/Banner.jpeg" class="d-block w-100" alt="Banner1">
+                <img src="/img/Banner.jpg" class="d-block w-100" alt="Banner1">
               </div>
               <div class="carousel-item">
                 <img src="/img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner2">
