--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             </div>
             <div class="carousel-inner border">
               <div class="carousel-item active">
-                <img src="/img/Banner.jpg" class="d-block w-100" alt="Banner1">
+                <img src="/img/enojado.png" class="d-block w-100" alt="Banner1">
               </div>
               <div class="carousel-item">
-                <img src="/img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner2">
+                <img src="/img/comer.png" class="d-block w-100" alt="Banner2">
               </div>
               <div class="carousel-item">
-                <img src="/img/BannerEjemplo2.jpg" class="d-block w-100" alt="Banner3">
+                <img src="/img/cumpleanos.png" class="d-block w-100" alt="Banner3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -173,5 +173,6 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
+  
 </body>
 </html>
