--- a/index.html
+++ b/index.html
@@ -75,6 +75,28 @@
       </div>
     </main>
 
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner1">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner2">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
     <!-- Clasificaciones -->
     <div class="container-fluid mt-5 mb-5">
       <div class="row">
