--- a/index.html
+++ b/index.html
@@ -44,57 +44,28 @@
     </nav>
 
     <!-- Carrusel -->
-    <main id="mainInicio">
-      <div class="container mt-5 mb-5">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner border">
-              <div class="carousel-item active">
-                <img src="/img/enojado.png" class="d-block w-100" alt="Banner1">
-              </div>
-              <div class="carousel-item">
-                <img src="/img/comer.png" class="d-block w-100" alt="Banner2">
-              </div>
-              <div class="carousel-item">
-                <img src="/img/cumpleanos.png" class="d-block w-100" alt="Banner3">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+    <div class="container mt-5">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner1">
           </div>
+          <div class="carousel-item">
+            <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner2">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-    </main>
-
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner1">
-        </div>
-        <div class="carousel-item">
-          <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner2">
-        </div>
-        <div class="carousel-item">
-          <img src="./img/BannerEjemplo1.jpg" class="d-block w-100" alt="Banner3">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
 
     <!-- Clasificaciones -->
